# website

./: .gitignore  .mise.toml  .npmrc  .pre-commit-config.yaml  .prettierignore  .replit  .rtx.toml  README.md  astro.config.mjs  astro.config.ts  codedump.md  drizzle.config.ts  fastapi-profiler.html  flake.nix  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements.txt  tailwind.config.js  tailwind.config.mjs  techstack.md  techstack.yml  temp.json  tsconfig.alter.json  tsconfig.base.json  tsconfig.json  tsconfig.solidjs.json  turbo.json  vercel.json
.github/: dependabot.yml
.github/workflows/: ci.yml  stale.yml  test.yml
.husky/: prepare-commit-msg
.vercel/: project.json
api/: backendPython.py  index.py  py.py
api/backendFastapi/: index.py
api/backendFastapi/test/: index.py
api/py/_main/: index.py  requirements.txt
api/py/_test/: requirements.txt
api/py/_test_basic/: index.py
api/py/main/: requirements.txt
api/py/test/: index.py
api/python/: index.py
api/python/codecheckr/: index.py  requirements.txt
api/python/test/: index.py
api/tests/: test_hello.py
app/: main.py
app/api/common/: __init__.py
app/api/common/routers/: __init__.py
app/api/instagram/models/: __init__.py  database.py
app/api/instagram/routers/: __init__.py
app/api/xtra/: spiders.py
app/api/xtra/routers/: content.py
app/core/: authentication.py  exceptions.py  init_app.py
app/core/base/: base_models.py
app/settings/: config.py  config_scrapy.py  log.py
app/utils/: cleanup.py  webhooks.py
apps/backend/: package.json  requirements.txt
apps/backend-python/: package.json  pyproject.toml
apps/backend-python/src/apps/instagram/: __init__.py
apps/backend/src/apps/reddit/: __init__.py
apps/frontend/: astro.config.js  package.json  pnpm-lock.yaml
apps/frontend/src/: env.d.ts
apps/frontend/src/projects/streamer/shared/: stores.ts
apps/frontend/src/server/: package.json
backend/: __init__.py  init_app.py  middlewares.py  prefs.py  run.py  scripts.py  settings.py
backend/api/common/models/: __init__.py  database.py
backend/api/instagram/: __init__.py  utilities.py
backend/api/instagram/routers/: auth.py  user.py
backend/api/reddit/: __init__.py
backend/api/xtra/: utilities.py
backend/apps/cmn/: __init__.py  modelDatabase.py  routerAuth.py  routerTester.py
backend/apps/instagram/: modelDatabase.py  modelSchemas.py  routerPost.py  routerUser.py  utilities.py
backend/apps/reddit/: utilities.py
backend/apps/xtra/: __init__.py  routerDownload.py  spiderDownload.py  utilities.py
backend/controllers/: __init__.py  codecheckr.py  facerecog.py  instagram.py  xtra.py
backend/core/: authentication.py  exceptions.py  init_app.py  settings.py
backend/core/base/: base_json.py
backend/core/modules/: artwork.py  builder.py  scrapy_app.py
backend/models/: instagram.py  xtra.py
backend/projects/common/: __init__.py  modelDatabase.py  routerAuth.py  routerWorker.py
backend/projects/instagram/: __init__.py  modelDatabase.py  modelSchemas.py  utilities.py
backend/projects/reddit/: utilities.py
backend/projects/xtra/: __init__.py  routerDownload.py
backend/schemas/: instagram.py
backend/settings/: config_celery.py
backend/spiders/: download.py
backend/tests/: conftest.py  data.json  test_instagram.py
backend/utils/: cleanup.py  database.py  partials.py  schemas.py  utilities.py  webhooks.py
backend/web/spiders/: wikia.py
backend/web/workers/: instagram.py
backendPython/apps/cmn/: __init__.py  router.py
backendPython/apps/instagram/: modelTypes.py  routerAuth.py
backendPython/core/: authentication.py  init_app.py  settings.py
backendPython/core/base/: base_models.py
backendPython/core/modules/: artwork.py  celery_app.py
backendPython/tests/: data.json
backendpython/: main.py
backendpython/core/: settings.py
migrations/: 0000_kind_puff_adder.sql
migrations/meta/: 0000_snapshot.json  _journal.json
src/: env.d.ts  index.ts  middleware.ts
src/components/: Base.Layout.astro  BaseLayout.astro  ComingSoon.widget.astro
src/components/deicmsmarks/: LoginButton.tsx  LoginDetail.tsx  ViewButton.tsx
src/components/netaid/: authButton.tsx  getAll.tsx
src/context/: deicmsmarks.ts  netaid.ts
src/database/: client.ts
src/database/schema/: netaid.ts
src/features/: temp.tsx
src/features/codechecker/: main.astro
src/features/codechecker/components/: form.tsx
src/features/codechecker/context/: store.ts
src/features/codechkr/: main.astro
src/features/codechkr/components/: form.tsx
src/features/streamer/: package.json
src/features/streamer/components/: button.tsx  qrcode.tsx  stream.tsx
src/pages/: agencies.astro  index.astro
src/pages/_api/trpc/: [trpc].ts
src/pages/api/: [trpc].ts
src/pages/api/js/: index.ts
src/pages/apiJs/: qrScanner.ts
src/pages/apiJs/trpc/: [trpc].ts
src/pages/games/: 2048.astro  tik-tak-toe.astro
src/pages/projects/: codechecker.astro  codecheckr.astro  codechkr.astro  deicmsmarks.astro  netaid.astro  streamer.astro
src/pages/projects/games/: tik-tak-toe.astro
src/projects/instagram/: package.json
src/projects/streamer/: main.astro  package.json
src/projects/streamer/components/: button.tsx  qrcode.tsx  stream.tsx
src/projects/streamer/widgets/: navbar.astro  qrcode.astro
src/server/: _app.ts  client.ts  context.ts  index.ts  trpc.ts
src/server/dump/: app.router.ts  appRouter.ts  context.ts  note.controller.ts  router.ts
src/server/routers/: _app.ts  deicms.ts  example.ts  netaid.ts
src/server/schemas/: deicms.detail.mks.ts  deicms.detail.sem.ts  deicms.details.ts  deicms.login.ts
src/styles/: global.css
src/utils/: cms-github.ts  trpc.ts
ui/: package.json
